// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dbRegister should put a single element for a Character file 1`] = `
Object {
  "AssetId": "CHARACTER#12345",
  "DataCategory": "Meta::Character",
  "FirstImpression": "Frumpy Goth",
  "Name": "Tess",
  "OneCoolThing": "Fuchsia eyes",
  "Outfit": "A bulky frock-coat lovingly kit-bashed from a black hoodie and patchily dyed lace.",
  "Pronouns": Object {
    "adjective": "hers",
    "object": "her",
    "possessive": "her",
    "reflexive": "herself",
    "subject": "she",
  },
  "address": Object {
    "fileName": "test",
    "zone": "Library",
  },
  "images": Array [
    "IMAGE-123",
  ],
  "scopedId": "TESS",
  "zone": "Library",
}
`;

exports[`dbRegister should save correct default appearance for Rooms and Features 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": undefined,
  "address": Object {
    "fileName": "test",
    "zone": "Library",
  },
  "defaultExits": Array [],
  "defaultNames": Object {
    "Welcome": Object {
      "name": "Test",
      "tag": "Room",
    },
    "clockTower": Object {
      "name": "TestFeature",
      "tag": "Feature",
    },
  },
  "importTree": Array [],
  "instance": undefined,
}
`;

exports[`dbRegister should save correct default appearance for Rooms and Features 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [
    Object {
      "defaultAppearances": Array [
        Object {
          "exits": Array [],
          "name": "Test",
          "render": Array [
            "Test render!",
            Object {
              "tag": "Link",
              "targetTag": "Feature",
              "text": "(clock tower)",
              "to": "clockTower",
            },
          ],
        },
      ],
      "key": "Welcome",
      "tag": "Room",
    },
    Object {
      "defaultAppearances": Array [
        Object {
          "name": "TestFeature",
          "render": Array [
            "Test feature render",
          ],
        },
      ],
      "key": "clockTower",
      "tag": "Feature",
    },
  ],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;

exports[`dbRegister should save exits in default appearance for Rooms 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": undefined,
  "address": Object {
    "fileName": "test",
    "zone": "Library",
  },
  "defaultExits": Array [
    Object {
      "from": "Entry",
      "name": "welcome",
      "to": "Welcome",
    },
  ],
  "defaultNames": Object {
    "Entry": Object {
      "name": "Entry",
      "tag": "Room",
    },
    "Welcome": Object {
      "name": "Test",
      "tag": "Room",
    },
  },
  "importTree": Array [],
  "instance": undefined,
}
`;

exports[`dbRegister should save exits in default appearance for Rooms 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [
    Object {
      "defaultAppearances": Array [
        Object {
          "exits": Array [],
          "name": "Test",
          "render": Array [
            "Test render!",
          ],
        },
      ],
      "key": "Welcome",
      "tag": "Room",
    },
    Object {
      "defaultAppearances": Array [
        Object {
          "exits": Array [
            Object {
              "name": "welcome",
              "to": "Welcome",
            },
          ],
          "name": "Entry",
          "render": Array [
            "Entry render!",
          ],
        },
      ],
      "key": "Entry",
      "tag": "Room",
    },
  ],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;

exports[`dbRegister should save meta only for instanced Story type 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": true,
  "address": Object {
    "fileName": "test",
    "zone": "Library",
  },
  "defaultExits": Array [],
  "defaultNames": Object {},
  "importTree": Array [],
  "instance": true,
}
`;

exports[`dbRegister should save meta only for instanced Story type 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;

exports[`dbRegister should save meta, rooms for Asset type 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": undefined,
  "address": Object {
    "fileName": "test",
    "zone": "Library",
  },
  "defaultExits": Array [],
  "defaultNames": Object {
    "Welcome": Object {
      "name": "Welcome",
      "tag": "Room",
    },
  },
  "importTree": Array [],
  "instance": undefined,
}
`;

exports[`dbRegister should save meta, rooms for Asset type 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [
    Object {
      "defaultAppearances": Array [
        Object {
          "rooms": Array [
            Object {
              "name": "Welcome",
              "x": 0,
              "y": 100,
            },
          ],
        },
      ],
      "key": "Village",
      "tag": "Map",
    },
    Object {
      "defaultAppearances": Array [
        Object {
          "exits": Array [],
          "name": "Welcome",
          "render": Array [],
        },
      ],
      "key": "Welcome",
      "tag": "Room",
    },
    Object {
      "defaultAppearances": Array [],
      "key": "clockTower",
      "tag": "Feature",
    },
  ],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;

exports[`dbRegister should save meta, rooms for Story type 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": true,
  "address": Object {
    "fileName": "test",
    "zone": "Library",
  },
  "defaultExits": Array [],
  "defaultNames": Object {},
  "importTree": Array [],
  "instance": undefined,
}
`;

exports[`dbRegister should save meta, rooms for Story type 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [
    Object {
      "defaultAppearances": Array [],
      "key": "Welcome",
      "tag": "Room",
    },
  ],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;
